--- a/index.html
+++ b/index.html
@@ -50,35 +50,31 @@
     <section class="main1">
         <h2 class="htwo">Explore Your Style</h2>
         <div class="box">
-
-            <div class="img1">
+            <div></div>
                 <h3>MODERN</h3>
-                <img src="Images/sec.jpg" alt="#modern kitchen">
+                <img src="Images/sec.jpg" id="img1">
+                <h3>CLASSIC</h3> 
+                <img src="Images/third.jpg" id="img2">
+                <h3>SCANDINAVIAN</h3> 
+                <img src="Images/fo.jpg" id="img3">
             </div>
-            <div class="img2">
-                <h3>CLASSIC</h3>
-                <img src="Images/third.jpg" alt="">
-            </div>
-            <div class="img3">
-                <h3>SCANDINAVIAN</h3>
-                <img src="Images/fo.jpg" alt="" width="10%" height="10%" >
-            </div>
-        </div>
         <button class="btn2">Discover More <ion-icon name="arrow-forward-outline"></ion-icon></button>
 
     </section>
     <section class="main2">
-        <h2>Popular Designs</h2>
+        <div class="main3">
+            <h2>Popular Designs</h2>
+            <img src="Images/fi.jpg" alt="" id="img4">
+            <img src="Images/six.jpg" alt="" id="img5" >
+            <img src="Images/se.jpg" alt="" id="img6" >
+        </div>
+        <button class="btn3">Explore all<ion-icon name="arrow-forward-outline"></ion-icon></button>
+            
+
+    </section>
+    <section class="main4">
         <div>
-            <div>
-
-            </div>
-            <div>
-
-            </div>
-            <div>
-
-            </div>
+            <h2>Need inspiration?</h2>
         </div>
 
     </section>
