--- a/index.html
+++ b/index.html
@@ -31,10 +31,11 @@
                         <ion-icon name="logo-pinterest"></ion-icon>
                         <ion-icon name="camera-outline"></ion-icon>
                     </div>
-                    <div>
-                        <ion-icon name="heart-outline"></ion-icon>
-                        <ion-icon name="storefront-outline"></ion-icon>
-                    </div>
+                </div>
+                <div class="icons">
+                    <ion-icon name="person-outline"></ion-icon>
+                    <ion-icon name="heart-outline"></ion-icon>
+                    <ion-icon name="storefront-outline"></ion-icon>
                 </div>
         </div>
         <div class="empty">
@@ -49,24 +50,45 @@
     </section>
     <section class="main1">
         <h2 class="htwo">Explore Your Style</h2>
-        <div class="box">
-            <div></div>
+        <div class="divest">
+
+            <div class="class1">
                 <h3>MODERN</h3>
                 <img src="Images/sec.jpg" id="img1">
+            </div>
+            <div class="class2">
                 <h3>CLASSIC</h3> 
                 <img src="Images/third.jpg" id="img2">
+            </div>
+            <div class="class3">
                 <h3>SCANDINAVIAN</h3> 
                 <img src="Images/fo.jpg" id="img3">
+            </div>
+        </div>
+            
             </div>
         <button class="btn2">Discover More <ion-icon name="arrow-forward-outline"></ion-icon></button>
 
     </section>
     <section class="main2">
+        <h2 class="design">Popular Designs</h2>
         <div class="main3">
-            <h2 class="design">Popular Designs</h2>
-            <img src="Images/fi.jpg" alt="" id="img4">
-            <img src="Images/six.jpg" alt="" id="img5" >
-            <img src="Images/se.jpg" alt="" id="img6" >
+            <div class="img9">
+                <img src="Images/rustic.png" alt="" id="img4"><br>
+                <span class="Rustic">Rustic Oak Wood Table</span><ion-icon name="heart-outline"></ion-icon> <br>
+                <span class="Rustic">$229,90</span>  
+            </div>
+            <div class="img11">
+                <img src="Images/book.png" alt="" id="img5"><br>
+                <span class="Rustic">Oak Wood Wall Shelves</span><ion-icon name="heart-outline"></ion-icon><br>
+                <span class="Rustic">$49,90</span>
+            </div>
+            <div class="img10">
+                <img src="Images/seat.jpg" alt="" id="img6"><br>
+                <span class="Rustic">Scandinavian Mustard chair</span><ion-icon name="heart-outline"></ion-icon><br>
+                <span class="Rustic">$79,90</span>
+
+            </div>
         </div>
         <button class="btn3">Explore all<ion-icon name="arrow-forward-outline"></ion-icon></button>
             
@@ -74,12 +96,14 @@
     </section>
     <section class="main4">
         <div class="man4">
-            <div>
-              <h2>Need inspiration?</h2>
-                <p>Find all your inspiration,interior ideas and creative tips from our inspiration vault</p>
+            <div class="circle">
+                <div class="Need">
+                    <h2>Need inspiration?</h2>
+                    <p>Find all your inspiration,interior ideas and creative tips from our inspiration vault</p>
                     <p id="Explore">Explore Ideas<ion-icon name="arrow-forward-outline"></ion-icon> </p>  
                     <p id="styles">Style Guides <ion-icon name="arrow-forward-outline"></ion-icon></p> 
                     <p id="blog">Our Blog <ion-icon name="arrow-forward-outline"></ion-icon></p> 
+                </div>
             </div>
           <div>
               <img src="Images/nn.webp" alt="" id="img7">
