--- a/index.html
+++ b/index.html
@@ -49,29 +49,21 @@
         </div>
     </section>
     <section class="main1">
-        <h2 class="htwo">Explore Your Style</h2>
-        <div class="divest">
-
-            <div class="class1">
-                <h3>MODERN</h3>
-                <img src="Images/sec.jpg" id="img1">
-            </div>
-            <div class="class2">
-                <h3>CLASSIC</h3> 
-                <img src="Images/third.jpg" id="img2">
-            </div>
-            <div class="class3">
-                <h3>SCANDINAVIAN</h3> 
-                <img src="Images/fo.jpg" id="img3">
-            </div>
+        <h1>Explore Your Style____</h1>
+        <div class="msc">
+            <h3>MODERN</h3>
+            <h3>CLASSIC</h3>
+            <h3>SCANDINAVIAN</h3>
         </div>
-            
-            </div>
-        <button class="btn2">Discover More <ion-icon name="arrow-forward-outline"></ion-icon></button>
-
+        <div class="imag">
+            <img src="Images/sec.jpg" alt="" id="id1">
+            <img src="Images/third.jpg" alt="" id="id2">
+            <img src="Images/fo.jpg" alt="" id="id3">
+        </div>
+        <button class="btn6">Discover More<ion-icon name="arrow-forward-outline"></ion-icon></button>
     </section>
     <section class="main2">
-        <h2 class="design">Popular Designs</h2>
+        <h2 class="design">Popular Designs_______</h2>
         <div class="main3">
             <div class="img9">
                 <img src="Images/rustic.png" alt="" id="img4"><br>
