--- a/index.html
+++ b/index.html
@@ -49,12 +49,13 @@
         </div>
     </section>
     <section class="main1">
-        <h1>Explore Your Style____</h1>
+        <h1 class="mn1">Explore Your Style</h1>
         <div class="msc">
-            <h3>MODERN</h3>
+            <h3 class="modern">MODERN</h3>
             <h3>CLASSIC</h3>
             <h3>SCANDINAVIAN</h3>
         </div>
+        <hr class="hr22">
         <div class="imag">
             <img src="Images/sec.jpg" alt="" id="id1">
             <img src="Images/third.jpg" alt="" id="id2">
@@ -63,7 +64,7 @@
         <button class="btn6">Discover More<ion-icon name="arrow-forward-outline"></ion-icon></button>
     </section>
     <section class="main2">
-        <h2 class="design">Popular Designs_______</h2>
+        <h2 class="design">Popular Designs</h2>
         <div class="main3">
             <div class="img9">
                 <img src="Images/rustic.png" alt="" id="img4"><br>
